update service/dev
