# router/app.go
@@ -70,6 +70,16 @@ func App() *gin.Engine {
 		// ---------------- BEGIN - dev ----------------
 		// 新增菜单
 		auth.POST("/dev/menu/add", service.DevMenuAdd)
+		// 修改菜单
+		auth.PUT("/dev/menu/update", service.DevMenuUpdate)
+		// 删除菜单
+		auth.DELETE("/dev/menu/delete", service.DevMenuDelete)
+		// 新增功能
+		auth.POST("/dev/func/add", service.DevFuncAdd)
+		// 修改功能
+		auth.PUT("/dev/func/update", service.DevFuncUpdate)
+		// 删除功能
+		auth.DELETE("/dev/func/delete", service.DevFuncDelete)
 		// ---------------- END - dev ----------------
 	}
 	return r
